# goit-pyweb-hw-09

project9/: pyproject.toml
project9/spiderproject/: authors.json  scrapy.cfg
project9/spiderproject/spiderproject/: items.py  middlewares.py  pipelines.py  settings.py
project9/spiderproject/spiderproject/spiders/: authors.py  quotes.py
