[tool.poetry]
name = "project9"
version = "0.1.0"
description = ""
package-mode = false
authors = ["Dan1k <sv.dan1kk@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
scrapy = "^2.11.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
